prd/unispace/unispace-back/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unispace-back
  namespace: unispace
  labels:
    app: unispace-back
spec:
  replicas: 1
  selector:
    matchLabels:
      app: unispace-back
  template:
    metadata:
      labels:
        app: unispace-back
        app.kubernetes.io/part-of: soludev-workload
    spec:
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app.kubernetes.io/part-of: soludev-workload
      containers:
        - name: unispace-back
          image: kaiohz/pickpro:unispace-back-e4537a94a67849bcdd0653544d89bebfc15170a5
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              path: /health
              port: 80
            initialDelaySeconds: 120
            periodSeconds: 10
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: /health
              port: 80
            initialDelaySeconds: 90
            periodSeconds: 5
          resources:
             requests:
               memory: "128Mi"
               cpu: "100m"
             limits:
               memory: "512Mi"
               cpu: "200m"
      imagePullSecrets:
        - name: unispace-docker-secret
