prd/unispace/unispace-back/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: unispace-back
  namespace: unispace
  labels:
    app: unispace-back
spec:
  type: ClusterIP
  selector:
    app: unispace-back
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
