prd/unispace/unispace-back/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: unispace-back-ingress
  namespace: unispace
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/redirect-scheme: https
spec:
  rules:
    - host: unispace-back.soludev.tech
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: unispace-back
                port:
                  number: 80
